Fix page overflow issues

--- a/src/stylesheets/pageparts/_faqs.sass
+++ b/src/stylesheets/pageparts/_faqs.sass
@@ -17,7 +17,8 @@
       flex: 0 1 50%
 
   &__title
-    padding-right: $textSpacer
+    @media (min-width: $tablet)
+      padding-right: $textSpacer
 
   .accordion
     @media (max-width: $maxSmallDesktop)
