--- a/src/stylesheets/pageparts/_games-feed.sass
+++ b/src/stylesheets/pageparts/_games-feed.sass
@@ -1,5 +1,6 @@
 .games-feed
   +spacingBottom
+  overflow-x: clip
 
   &__header
     +gutters
